Added file circle.html .

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script>
 //This example got from here: http://www.internet-technologies.ru/articles/article_2887.html
     var canvas = document.querySelector("#myCanvas");
+    down = false;
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 //How to make a full windowed canvas: https://h3manth.com/content/html5-canvas-full-screen-and-full-page
